# keypeek

./: Cargo.toml  README.md  build.rs  cargo-appimage.desktop  flake.nix
.github/workflows/: workflow.yml
docs/decisions/: 001-saved-connections-and-startup-registration.md
resources/: macos-info-plist-ext.xml
scripts/: bundle-macos.sh
src/: connection.rs  device_discovery.rs  keyboard.rs  layout_key.rs  main.rs  overlay_window.rs  settings.rs  single_instance.rs  tray.rs  ui_wake.rs
src/overlay_window/: connection_flow.rs  lifecycle.rs  settings_sync.rs  state.rs  ui_overlay.rs  ui_settings.rs
src/platform/: eframe_host.rs  mod.rs  resume.rs  startup.rs
src/platform/wayland/: egl.rs  input.rs  mod.rs
src/protocols/: mod.rs  via.rs  vial.rs  zmk.rs  zmk_rpc.rs
src/qmk_keycode_labels/: advanced.rs  layer.rs
src/zmk_keycode_labels/: behavior.rs  hid_usage.rs
