[package]
name = "keypeek"
license = "GPL-3.0-only"
description = "Keyboard layer overlay for VIA, Vial, and ZMK"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/keypeek"
readme = "README.md"
version = "0.7.0"
edition = "2021"

[dependencies]
rust-ini = "0.21.3"
directories = "6.0.0"
tray-icon = "0.24.1"
egui = "0.34.3"
eframe = { version = "0.34.3", features = ["glow"] }
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
qmk-via-api = { version = "0.8.0" }
hidapi = { version = "2.6.5", features = ["macos-shared-device"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
egui-phosphor = "0.12.0"
egui-file-dialog = "0.13.0"
image = "0.25.10"
lzma-rs = "0.3"
serialport = "4.9.0"
zmk-studio-api = { git = "https://github.com/srwi/zmk-studio-api", features = ["serial", "ble"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
zbus = "5.12.0"
winit = { version = "0.30.13", features = ["x11"] }
egui_glow = "0.34.3"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
wayland-egl = "0.32.11"
khronos-egl = { version = "6", features = ["static"] }

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30.13"
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3", features = ["NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSNotification", "NSOperation", "block2"] }
objc2-service-management = { version = "0.3", features = ["objc2", "objc2-foundation", "SMAppService"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62.2", features = ["Devices_Bluetooth", "Devices_Radios", "Foundation", "Win32_Foundation", "Win32_System_RemoteDesktop", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "KeyPeek"
identifier = "dev.srwi.keypeek"
icon = ["resources/icon@2x.png"]
osx_info_plist_exts = ["resources/macos-info-plist-ext.xml"]
